--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: yourdockerhub/frontend:latest
+        image: frontend-app
+        imagePullPolicy: Never
         ports:
         - containerPort: 80
